setup middleware for authentication and validating token. setup email verification

--- a/server/.env.template
+++ b/server/.env.template
@@ -1,7 +1,19 @@
+# Environment variables for the server
+# SERVER
 PORT=
+
+# CLIENT
 CLIENT_URL=
+
+# DATABASE
 DATABASE_URL=
+
+# TOKENS
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
 ACCESS_TOKEN_EXPIRES_IN=
 REFRESH_TOKEN_EXPIRES_IN=
+
+# EMAIL
+EMAIL_USER=
+EMAIL_PASS=
