--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.7",
     "uuid": "^11.1.0"
   },
