--- a/server/package.json
+++ b/server/package.json
@@ -14,14 +14,17 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.16.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "pg": "^8.16.0",
+    "stripe": "^18.2.1",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
   }
