small change. need to fix storing cookies

--- a/server/.env.template
+++ b/server/.env.template
@@ -1,9 +1,13 @@
 # Environment variables for the server
+# NODE_ENV
+NODE_ENV=
+
 # SERVER
 PORT=
 
 # CLIENT
 CLIENT_URL=
+VERCEL_URL=
 
 # DATABASE
 DATABASE_URL=
@@ -17,3 +21,11 @@ REFRESH_TOKEN_EXPIRES_IN=
 # EMAIL
 EMAIL_USER=
 EMAIL_PASS=
+
+# GOOGLE
+GOOGLE_CLOUD_PROJECT=
+GOOGLE_STORAGE_KEY_FILE=
+GOOGLE_CLOUD_BUCKET=
+
+# STRIPE
+STRIPE_SECRET_KEY=
